# project-time-allocation

./: .gitignore  README.md  prototype.ipynb  pyproject.toml  pytest.ini
.github/workflows/: python-tests.yml
src/project_time_allocation/app/: Home.py  main.py  utils.py
src/project_time_allocation/app/pages/: About.py
src/project_time_allocation/core/: input.py
src/project_time_allocation/core/engine/: loss.py  objects.py  optimizer.py  simplex_builder.py  utils.py
src/project_time_allocation/core/schemas/: project.py  worker.py
src/project_time_allocation/core/service/: service.py
src/project_time_allocation/task/: main.py
src/project_time_allocation/task/data/: input.xlsx  project_hours.csv  project_return.csv  workers.csv
tests/test_project_time_allocation/test_core/: test_input.py
tests/test_project_time_allocation/test_core/test_engine/: test_loss.py  test_objects.py  test_simplex_builder.py  test_utils.py
