[tool.poetry]
name = "project-allocation"
version = "0.1.0"
description = "Engine for project-hour allocation"
authors = ["Stefano Polo <stefano.polo@illimity.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
scipy = "^1.9.3"
ipykernel = "^6.18.3"
notebook = "^6.5.2"
matplotlib = "^3.6.2"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.7"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
